Texture Changes don't update mesh when changed in Vertex Weight modifiers #61185

Closed
opened 2019-02-04 22:10:23 +01:00 by mantissa · 5 comments

System Information
Operating system: Xubuntu 18.04
Graphics card: Nvidia Titan X (Pascal)

Blender Version
Broken: 2.80 38984b10ff 2019-02-04
Worked: 2.79b

Short description of error
When using any type of texture in the Vertex Weight modifiers, an update doesn't get triggered when changing the texture used.
Looks like similar behavior to what was happening in the Displace modifier. See #58184
I've attached a setup for each modifier where you can change the texture and see it doesn't update.
Right now entering and exiting edit mode or changing a value in the modifier stack updates the mesh and takes the texture changes in to account.

VertexWeightProximity.blend

VertexWeightMix.blend

VertexWeightEdit.blend
Exact steps for others to reproduce the error

  • Create mesh
  • Create and fill Vertex Group
  • Modify it with a Vertex Weight Edit, Mix or Proximity modifer
  • Use a texture for the modifications
  • Change the texture settings, mesh doesn't update
**System Information** Operating system: Xubuntu 18.04 Graphics card: Nvidia Titan X (Pascal) **Blender Version** Broken: 2.80 38984b10ff7b 2019-02-04 Worked: 2.79b **Short description of error** When using any type of texture in the Vertex Weight modifiers, an update doesn't get triggered when changing the texture used. Looks like similar behavior to what was happening in the Displace modifier. See #58184 I've attached a setup for each modifier where you can change the texture and see it doesn't update. Right now entering and exiting edit mode or changing a value in the modifier stack updates the mesh and takes the texture changes in to account. [VertexWeightProximity.blend](https://archive.blender.org/developer/F6508734/VertexWeightProximity.blend) [VertexWeightMix.blend](https://archive.blender.org/developer/F6508733/VertexWeightMix.blend) [VertexWeightEdit.blend](https://archive.blender.org/developer/F6508732/VertexWeightEdit.blend) **Exact steps for others to reproduce the error** - Create mesh - Create and fill Vertex Group - Modify it with a Vertex Weight Edit, Mix or Proximity modifer - Use a texture for the modifications - Change the texture settings, mesh doesn't update
Author

Added subscriber: @Mantissa

Added subscriber: @Mantissa
mantissa changed title from Texture Changes don't update mesh when changed in Vertex Wight modifiers. to Texture Changes don't update mesh when changed in Vertex Weight modifiers 2019-02-04 22:39:51 +01:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-02-05 09:40:58 +01:00
Member

Checking...

Checking...

This issue was referenced by b10b77d4f0

This issue was referenced by b10b77d4f0588bfd2af3abbffc9a266a4df26f0c
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61185
No description provided.